# ektrack

./: DetectedSingleTargets(in).csv  TODO  justfile  minitest.csv  pyproject.toml  setup.cfg  track.py
korona/: TransducerRanges.xml  raw2tracks.py
src/: detections.py  detections_test.py  main.py  netcdf2dets.py  prominence.py  track.py
