[tool.ruff]
ignore = ["E701","E402","E501"]

[project]
name = "ektrack2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ektools>=0.1.2",
    "koronascript>=0.2.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.4",
    "numba>=0.63.1",
    "scipy>=1.16.3",
    "xarray>=2025.12.0",
    "xarray-regrid>=0.4.2",
]
